# Swippity

./: CMakeLists.txt  README.md
src/: hello.cpp  hello.hpp  main.cpp
test/: CMakeLists.txt  test-hello.cpp
